--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
+    - name: Join HEXO Condition
+      run: npm install hexo
+    - name: Bulid To Public
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+        pwd
